--- a/styles.css
+++ b/styles.css
@@ -402,6 +402,11 @@ body
     margin: auto;
 }
 
+#contact__section
+{
+    background-color: rgb(9, 219, 177);
+}
+
 #contact__title
 {
     text-align: center;
@@ -410,7 +415,7 @@ body
 
 #contact__container
 {
-    padding: 1.2rem 0rem;
+    padding: 2rem 0;
     display: flex;
     justify-content: center;
 }
@@ -420,12 +425,12 @@ body
     display: flex;
     width: 80%;
     justify-content: space-between;
-    list-style: none;
+    flex-wrap: wrap;
 }
 
 #contact__info li a
 {
-    list-style: none;
+    margin: 2rem 1rem;
     font-size: 1.2rem;
     color: black;
     text-decoration: none;
