--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,8 @@ body
 #card__grid
 {
     display: grid;
-    width: 100vw;
+    margin: auto;
+    width: 90vw;
     grid-template-columns: repeat(auto-fit, minmax(var(--card-width), 1fr));
     grid-auto-rows: minmax(var(--card-height), auto);
     grid-gap: 2rem;
