--- a/styles.css
+++ b/styles.css
@@ -406,12 +406,63 @@ body
 #contact__section {
     width: 100vw;
     height: 100vh;
+    background:rgba(9, 219, 177, 0.4);
 }
 
 #contact__title {
-    height: 20vh;
+    height: 20%;
     padding-left: 1em;
     font-size: 5rem;
+}
+
+#contact__area__container {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+#contact__area {
+    width: 80%;
+    display: flex;
+}
+
+#contact__area ul {
+    width: 50%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.contact__item {
+    font-size: 1.5em;
+}
+
+#contact__area form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__input {
+    border-radius: 0.5em;
+    margin-bottom: 1em;
+    height: 2.5em;
+}
+
+#message__input {
+    height: 40%;
+    resize: none;
+    overflow: auto;
+}
+
+#submit__button {
+    width: 100px;
+    height: 40px;
+    font-size: 1em;
 }
 
 @media(max-width: 800px)
@@ -465,5 +516,9 @@ body
     #about__paragraph
     {
         width: 90%;
+    }
+
+    #contact__area ul {
+        display: none;
     }
 }
