--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,22 @@ body
     font-size: 1.5em;
 }
 
+.contact__item img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    transform: translate(0, 10px);
+}
+
+.contact__item a {
+    color: navy;
+    text-decoration: none;
+}
+
+.contact__item a:hover {
+    color: blue;
+}
+
 #contact__area form {
     flex: 1;
     display: flex;
@@ -449,6 +465,7 @@ body
 
 .contact__input {
     border-radius: 0.5em;
+    border: 0.2em solid black;
     margin-bottom: 1em;
     height: 2.5em;
 }
