--- a/styles.css
+++ b/styles.css
@@ -457,7 +457,7 @@ body
     color: blue;
 }
 
-#contact__area form {
+#contact__form {
     flex: 1;
     display: flex;
     flex-direction: column;
